# FourierD3

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
chho_data/graphite/: com_inter.xyz  graphite_AA_4x4x4.xyz  graphite_ABC_4x4x4.xyz  graphite_AB_4x4x4.xyz  mp-48.xyz  mp-48_noisy.xyz  mp-48_vacancy_4x4x4.xyz
chho_data/water_phases/: all_water_phases.xyz
data/: cnref.pt  en.pt  rcov.pt  rcov_cn.pt  sqrtQz.pt
examples/: carbon_minimization.py  plot_carbon_minimizations.ipynb  water_phases.ipynb
examples/carbons/: carbon_minimization.py
examples/chho_data/water_phases/: get_water_phases_structures.ipynb
examples/water_phases/: water_phases.ipynb  water_phases_fastd3.py
papercode/: decomp.py  fastd3_cor.py  fourierd3_cor.py  generate_boxes.py  get_convergence.py  get_mace_timings.py  get_scaling.py  get_scaling_torchd3.py  sio2.xyz  torchd3_cor.py
results/water_phases/relaxed_energies/: relaxed_MACE_D3_cut10_energies_2.txt  (+2 more)
src/: C60.xyz  ZIF-8.xyz  bilayer_graphene.xyz  calculator.py  diamond-cBN.xyz  fastd3.py  kspace_filter_d3.py  mesh_interpolator_d3.py  pair_pot.py  test.py  test_calculator.py  utils.py
src/fastd3/: __init__.py  calculator.py  core.py  kspace_filter_d3.py  mace_d3.py  mesh_interpolator_d3.py  pair_pot.py  utils.py
src/fourierd3/: __init__.py  calculator.py  core.py  kspace_filter_d3.py  mace_d3.py  mesh_interpolator_d3.py  pair_pot.py
test/: generate_boxes.py  get_convergence.py  get_cutoff.py  get_mesh_size.py  get_reference.py  get_scaling.py  make_calculator.py  test_tmp.py
(+3 files in other folders)
